--- a/W0474627_WEBD1000_First_Web_Page.html
+++ b/W0474627_WEBD1000_First_Web_Page.html
@@ -33,10 +33,10 @@ Version: 1
         <table style="width: 100%;">
             <tr>
                 <th style="width: 25%;"> 
-                    <img src="../ClassroomExercises/Affinity/c_switch_blue.svg" alt="Layer 2" style="width:auto;height:auto;">
+                    <img src="/Affinity/c_switch_blue.svg" alt="Layer 2" style="width:auto;height:auto;">
                 </th>
                 <th style="width: 25%;">
-                    <img src="../ClassroomExercises/Affinity/c_firewall_blue.svg" alt="Firewall" style="width:auto;height:auto;">
+                    <img src="/Affinity/c_firewall_blue.svg" alt="Firewall" style="width:auto;height:auto;">
                 </th>
                 <th style="width: 25%;">
                     <img src="../ClassroomExercises/Affinity/c_cloud_blue.svg" alt="Service Provider" style="width:auto;height:auto;">
