--- a/W0474627_WEBD1000_First_Web_Page.html
+++ b/W0474627_WEBD1000_First_Web_Page.html
@@ -39,10 +39,10 @@ Version: 1
                     <img src="/Affinity/c_firewall_blue.svg" alt="Firewall" style="width:auto;height:auto;">
                 </th>
                 <th style="width: 25%;">
-                    <img src="../ClassroomExercises/Affinity/c_cloud_blue.svg" alt="Service Provider" style="width:auto;height:auto;">
+                    <img src="/Affinity/c_cloud_blue.svg" alt="Service Provider" style="width:auto;height:auto;">
                 </th>
                 <th style="width: 25%;">
-                    <img src="../ClassroomExercises/Affinity/c_house_blue.svg" alt="SOHO" style="width:auto;height:auto;">
+                    <img src="Affinity/c_house_blue.svg" alt="SOHO" style="width:auto;height:auto;">
                 </th>
             <tr>
                 <td>Layer 2 Switch</td>
