--- a/W0474627_WEBD1000_First_Web_Page.html
+++ b/W0474627_WEBD1000_First_Web_Page.html
@@ -33,7 +33,7 @@ Version: 1
         <table style="width: 100%;">
             <tr>
                 <th style="width: 25%;"> 
-                    <img src="/Affinity/c_switch_blue.svg" alt="Layer 2" style="width:auto;height:auto;">
+                    <img src="Affinity/c_switch_blue.svg" alt="Layer 2" style="width:auto;height:auto;">
                 </th>
                 <th style="width: 25%;">
                     <img src="/Affinity/c_firewall_blue.svg" alt="Firewall" style="width:auto;height:auto;">
