--- a/W0474627_WEBD1000_First_Web_Page.html
+++ b/W0474627_WEBD1000_First_Web_Page.html
@@ -8,7 +8,7 @@ Date: 2023-09-23
 Version: 1
 -->
     <head>
-    <title>Johnjie</title>
+    <title>Network Diagramming Symbols</title>
     <meta charset="UTF-8">
     <Style>
         body{
