--- a/W0474627_WEBD1000_First_Web_Page.html
+++ b/W0474627_WEBD1000_First_Web_Page.html
@@ -29,7 +29,7 @@ Version: 1
     </style>
     </head>
     <Body>
-        <h1>Network Diagramming Symbols</h1>
+        <h1>Network Diagram Symbols</h1>
         <table style="width: 100%;">
             <tr>
                 <th style="width: 25%;"> 
