--- a/W0474627_WEBD1000_First_Web_Page_withCSS.html
+++ b/W0474627_WEBD1000_First_Web_Page_withCSS.html
@@ -32,16 +32,16 @@ Version: 1
         <table style="width: 100%;">
             <tr>
                 <th style="width: 25%;"> 
-                    <img src="../Classroom Exercises/Affinity/c_switch_blue.svg" alt="Layer 2" style="width:auto;height:auto;">
+                    <img src="affinity/c_switch_blue.svg" alt="Layer 2" style="width:auto;height:auto;">
                 </th>
                 <th style="width: 25%;">
-                    <img src="../Classroom Exercises/Affinity/c_firewall_blue.svg" alt="Firewall" style="width:auto;height:auto;">
+                    <img src="affinity/c_firewall_blue.svg" alt="Firewall" style="width:auto;height:auto;">
                 </th>
                 <th style="width: 25%;">
-                    <img src="../Classroom Exercises/Affinity/c_cloud_blue.svg" alt="Service Provider" style="width:auto;height:auto;">
+                    <img src="affinity/c_cloud_blue.svg" alt="Service Provider" style="width:auto;height:auto;">
                 </th>
                 <th style="width: 25%;">
-                    <img src="../Classroom Exercises/Affinity/c_house_blue.svg" alt="SOHO" style="width:auto;height:auto;">
+                    <img src="affinity/c_house_blue.svg" alt="SOHO" style="width:auto;height:auto;">
                 </th>
             <tr>
                 <td>Layer 2 Switch</td>
