--- a/W0474627_WEBD1000_First_Web_Page_withCSS.html
+++ b/W0474627_WEBD1000_First_Web_Page_withCSS.html
@@ -139,10 +139,14 @@ body {
     <h2>Different Network Diagramming Symbols</h2>
   </div>
   
-  <div class="left" style="background-color:#aaaaaa;">img src="affinity/c_switch_blue.svg" alt="Layer 2"</div>
-  <div class="middle" style="background-color:#bbb;">img src="affinity/c_firewall_blue.svg" alt="Firewall"</div>  
-  <div class="right" style="background-color:#ccc;">img src="affinity/c_cloud_blue.svg" alt="Service Provider"</div>
-  <div class="right" style="background-color:#ccc;">img src="affinity/c_house_blue.svg" alt="SOHO"</div>
+  <div class="left" style="background-color:#aaaaaa;">
+      <img src="affinity/c_switch_blue.svg" alt="Layer 2"></div>
+  <div class="middle" style="background-color:#bbb;">
+      <img src="affinity/c_firewall_blue.svg" alt="Firewall"></div>  
+  <div class="right" style="background-color:#ccc;">
+      <img src="affinity/c_cloud_blue.svg" alt="Service Provider"></div>
+  <div class="right" style="background-color:#ccc;">
+      <img src="affinity/c_house_blue.svg" alt="SOHO"></div>
   
   <div class="footer">
   <p>NSCC ITGE 2025</p>
