--- a/W0474627_WEBD1000_First_Web_Page_withCSS.html
+++ b/W0474627_WEBD1000_First_Web_Page_withCSS.html
@@ -16,6 +16,10 @@
         text-align: center;
         font-size: 5vw;
     }
+
+    th {
+        style: "width: 25%;
+    }
 <!--
 Student Name: Johnjie Alzate
 Student ID: W0474637
@@ -31,16 +35,16 @@ Version: 1
         <h1>Network Diagramming Symbools</h1>
         <table style="width: 100%;">
             <tr>
-                <th style="width: 25%;"> 
+                <th> 
                     <img src="affinity/c_switch_blue.svg" alt="Layer 2" style="width:auto;height:auto;">
                 </th>
-                <th style="width: 25%;">
+                <th>
                     <img src="affinity/c_firewall_blue.svg" alt="Firewall" style="width:auto;height:auto;">
                 </th>
-                <th style="width: 25%;">
+                <th>
                     <img src="affinity/c_cloud_blue.svg" alt="Service Provider" style="width:auto;height:auto;">
                 </th>
-                <th style="width: 25%;">
+                <th>
                     <img src="affinity/c_house_blue.svg" alt="SOHO" style="width:auto;height:auto;">
                 </th>
             <tr>
