--- a/myfirstcss/HTML_Sample_Code.html
+++ b/myfirstcss/HTML_Sample_Code.html
@@ -10,41 +10,35 @@
             <h2>IT Generalist</h2>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT ME</a></li>
+                    <li><a href="#">CONTACT</a></li>
                 </ul>
             </nav>
         </header>
         <main>
             <section>
+                <h0>
+                    <img src="..//myfirstcss/images/Janji.png" alt="Profile Picture" style="width:70px">
+                </h0>
                 <h3>About Me</h3>
                 <p1>
-                    I'm a software and hardware tester.
+                    An effective and innovative software & hardware test engineer involved in comprehensive range of engineering functions, project management and diverse industry. Has proven ability to combine technology and creativity to support product development, and has competencies of problem solving, technical learning, resourcefulness, learning on the fly, leadership and customer focus to perform quality assurance work and project delivery.
                 </p1>
 
             </section>
 
         </main>
-    <footer>
-        <p2>sample footer</p2>
-        <p3>
-            <tr>
-                <th>
-                    <img src="../myfirstcss/images/linkedin-icon.png" alt="linkedin" style="width: 30px;">
-                </th>
-                <th>
-                    <img src="..//myfirstcss/images/instagram-logo-svg-vector-for-print.svg" alt="ig" style="width: 30px;">
-                </th>
-                <th>
-                    <img src="..//myfirstcss/images/facebook.png" alt="facebook" style="width: 30px;">
-                </th>
-            </tr>
-        </p3>
-        <p4>
-            <title>2023 Johnjie Alzate | All Rights Reserved</title>
-        </p4>
-    </footer>
-
     </body>
+
+    <footer>
+        <h4>2023 Johnjie Alzate | All Rights Reserved</h4>
+        <h5>
+            <img src="../myfirstcss/images/icons8-linkedin (1).svg" alt="linkedin" style="width: 20px;">
+            <img src="..//myfirstcss/images/icons8-instagram (1).svg" alt="ig" style="width: 20px;">
+            <img src="..//myfirstcss/images/icons8-facebook (1).svg" alt="facebook" style="width: 20px;">
+            <img src="..//myfirstcss/images/icons8-twitter (1).svg" alt="twitter" style="width: 20px;">
+            <img src="..//myfirstcss/images/icons8-skype.svg" alt="twitter" style="width: 20px;">
+        </h5>
+    </footer>
 </html>
