--- a/Ride Share Site/W0474627_WEBD1000_Ride_Share.html
+++ b/Ride Share Site/W0474627_WEBD1000_Ride_Share.html
@@ -26,13 +26,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a1 class="nav-link" href="#home">Home</a1>
+                            <a class="nav-link" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a1 class="nav-link" href="#need-a-ride">Need a Ride</a1>
+                            <a class="nav-link" href="#need-a-ride">Need a Ride</a>
                         </li>
                         <li class="nav-item">
-                            <a1 class="nav-link" href="#give-a-ride">Give a Ride</a1>
+                            <a class="nav-link" href="#give-a-ride">Give a Ride</a>
                         </li>
                     </ul>
                 </div>
