--- a/Ride Share Site/W0474627_WEBD1000_Ride_Share.html
+++ b/Ride Share Site/W0474627_WEBD1000_Ride_Share.html
@@ -1,15 +1,22 @@
+<!-- Author: Johnjie Alzatae
+    Student ID: W0474627
+    Course: IT Generalist
+    Date: November 14, 2023
+    Project: Responsive Ride-Sharing Web Page with Bootstrap 5
+    Version: HTML Bootstrap
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scalae=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <!-- Boostrap CSS link-->
-        <link rel="stylesheet" href="https://cdn.jsdeliver.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-        <title>Johnjie - Ride Sharing</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+        <title>NSCC - Ride Sharing</title>
     </head>
     <body>
-        <!--Header Section-->
+        <!-- Webpage Content -->
         <header>
             <div class="container">
                 <h1>Welcome to Your Ride Sharing</h1>
@@ -38,5 +45,6 @@
                 </div>
             </div>
 
+            
     </body>
 </html>
