--- a/Ride Share Site/W0474627_WEBD1000_Ride_Share.html
+++ b/Ride Share Site/W0474627_WEBD1000_Ride_Share.html
@@ -8,12 +8,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>NSCC - Ride Sharing</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <!-- Boostrap CSS link-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-        <title>NSCC - Ride Sharing</title>
+        <!-- Boostrap JS (Latest Compiles JavaScript )-->
+        <script src="Https://cdn.jsdelvr.net/npm/bootstrap@5.3.0/dist/js/boostrap.bundle.min.js"></script>
     </head>
     <body>
         <!-- Webpage Content -->
@@ -24,9 +26,9 @@
         </header>
 
         <!-- Navigation Bar-->
-        <nav class="navbar navbar-expand-lg naavbar-light bg-light"></nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light"></nav>
             <div class="container">
-                <a class="navbar-brands" href="#">Johnjie</a>
+                <a class="navbar-brand" href="#">Johnjie</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="falsae" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
