--- a/Ride Share Site/W0474627_WEBD1000_Ride_Share.html
+++ b/Ride Share Site/W0474627_WEBD1000_Ride_Share.html
@@ -26,7 +26,7 @@
         </header>
 
         <!-- Navigation Bar-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light"></nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">Johnjie</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="falsae" aria-label="Toggle navigation">
@@ -46,7 +46,6 @@
                     </ul>
                 </div>
             </div>
-
-            
+        </nav>
     </body>
 </html>
