--- a/Ride Share Site/W0474627_WEBD1000_Ride_Share.html
+++ b/Ride Share Site/W0474627_WEBD1000_Ride_Share.html
@@ -47,5 +47,16 @@
                 </div>
             </div>
         </nav>
+        <section>
+            <div class="hero-image">
+                <div class="hero-text">
+                  <h1>NSCC Ride Share</h1>
+                  <p>We connect and move people</p>
+                  <button>Give a Ride</button>
+                  <button>Need a Ride</button>
+                  <button>How it works</button>
+                </div>
+        </section>
+
     </body>
 </html>
