--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -56,9 +56,10 @@
                 </div>
             </div>
         </nav>
+        <!-- Hero Section -->
         <section class="hero">
             <div class="hero-content">         
-               <h2 class="hero-title">NSCC Ride Share</h2> 
+               <h2 class="hero-title">Ride Sharing</h2> 
                <h3 class="hero-subtitle">The smarter way to travel!</h3>
                <button type="button" class="hero-button" onclick="location.href='needaride,.html'">Need a Ride</button>
                <button type="button" class="hero-button" onclick="location.href='givearide.html'">Give a Ride</button>
@@ -70,44 +71,37 @@
         <Section>
             <h5>Become a Driver</h5>
         </Section>
+        <!-- FAQs Section -->
         <Section>
             <div class="container mt-3">
-                <h2>Testimonies</h2>
-                <p><strong>Note:</strong> Here are some of the testimonies from the students whi use the service.</p>
+                <h6>Frequenctly Asked Questions</h6>
+                <p><strong>Note:</strong> Here are some of the FAQs.</p>
                 <div id="accordion">
                   <div class="card">
                     <div class="card-header">
-                      <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
-                        Collapsible Group Item #1
-                      </a>
+                      <a1 class="btn" data-bs-toggle="collapse" href="#faq1">Question 1</a1>
                     </div>
-                    <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
-                      <div class="card-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <div id="faq1" class="collapse show" data-bs-parent="#accordion">
+                      <div class="card-body">Answer 1
                       </div>
                     </div>
                   </div>
                   <div class="card">
                     <div class="card-header">
-                      <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">
-                      Collapsible Group Item #2
-                    </a>
+                      <a1 class="collapsed btn" data-bs-toggle="collapse" href="#faq2">Question 1</a1>
                     </div>
-                    <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
-                      <div class="card-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <div id="faq2" class="collapse" data-bs-parent="#accordion">
+                      <div class="card-body">Answer 2
                       </div>
                     </div>
                   </div>
                   <div class="card">
                     <div class="card-header">
-                      <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">
-                        Collapsible Group Item #3
-                      </a>
+                      <a1 class="collapsed btn" data-bs-toggle="collapse" href="#faq3">Question 3</a1>
                     </div>
-                    <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
+                    <div id="faq3" class="collapse" data-bs-parent="#accordion">
                       <div class="card-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Answer 3
                       </div>
                     </div>
                   </div>
