--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -15,7 +15,7 @@
         <!-- Boostrap CSS link-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
         <!-- Boostrap JS (Latest Compiles JavaScript )-->
-        <script src="Https://cdn.jsdelvr.net/npm/bootstrap@5.3.0/dist/js/boostrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelvr.net/npm/bootstrap@5.3.0/dist/js/boostrap.bundle.min.js"></script>
     </head>
     <body>
         <!-- Webpage Content -->
@@ -79,27 +79,27 @@
                 <div id="accordion">
                   <div class="card">
                     <div class="card-header">
-                      <a1 class="btn" data-bs-toggle="collapse" href="#faq1">Question 1</a1>
+                      <a1 class="btn" data-bs-toggle="collapse" href="#collapseOne">Question 1</a1>
                     </div>
-                    <div id="faq1" class="collapse show" data-bs-parent="#accordion">
+                    <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
                       <div class="card-body">Answer 1
                       </div>
                     </div>
                   </div>
                   <div class="card">
                     <div class="card-header">
-                      <a1 class="collapsed btn" data-bs-toggle="collapse" href="#faq2">Question 1</a1>
+                      <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Question 2</a1>
                     </div>
-                    <div id="faq2" class="collapse" data-bs-parent="#accordion">
+                    <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
                       <div class="card-body">Answer 2
                       </div>
                     </div>
                   </div>
                   <div class="card">
                     <div class="card-header">
-                      <a1 class="collapsed btn" data-bs-toggle="collapse" href="#faq3">Question 3</a1>
+                      <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">Question 3</a1>
                     </div>
-                    <div id="faq3" class="collapse" data-bs-parent="#accordion">
+                    <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
                       <div class="card-body">
                         Answer 3
                       </div>
