--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -28,7 +28,8 @@
         <!-- Navigation Bar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">NSCCRideShare</a>
+                <img src="../RideShareSite/images/NSCCLogo.png" alt="NSCClogo" style="width: 75px;">
+                <a class="navbar-brand" href="#">RideShare</a>                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="falsae" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
