--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -8,7 +8,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>NSCC - Ride Sharing</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
@@ -16,7 +15,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
         <!-- Boostrap JS (Latest Compiles JavaScript )-->
         <script src="https://cdn.jsdelvr.net/npm/bootstrap@5.3.0/dist/js/boostrap.bundle.min.js"></script>
-    </head>
+        <title>NSCC - Ride Sharing</title>
+      </head>
     <body>
         <!-- Webpage Content -->
         <header>
@@ -74,6 +74,8 @@
         </Section>
         <!-- FAQs Section -->
         <Section>
+          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
             <div class="container mt-3">
                 <h6>Frequenctly Asked Questions</h6>
                 <p><strong>Note:</strong> Here are some of the FAQs.</p>
