--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -36,23 +36,20 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#home">Home</a>
+                            <a class="nav-link" href="">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#need-a-ride">Need a Ride</a>
+                            <a class="nav-link" href="">Need a Ride</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#give-a-ride">Give a Ride</a>
+                            <a class="nav-link" href="">Give a Ride</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="testimonies">Testimonies</a>
+                            <a class="nav-link" href="">Testimonies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#faqs">FAQs</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#safety">Safety</a>
-                        </li>    
+                            <a class="nav-link" href="">FAQs</a>
+                        </li>  
                     </ul>
                 </div>
             </div>
@@ -111,5 +108,9 @@
                 </div>
               </div>
         </Section>
+        <!-- Footer -->
+        <footer>
+          <div></div>
+        </footer>
     </body>
 </html> 
