--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -20,89 +20,97 @@
     <body>
         <!-- Webpage Content -->
         <header>
-            <div class="container">
-                <h1>Welcome to Your Ride Sharing</h1>
-            </div>
+          <div class="container">
+            <h1>Welcome to Your Ride Sharing</h1>
+          </div>
         </header>
 
         <!-- Navigation Bar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-                <img src="../RideShareSite/images/NSCCLogo.png" alt="NSCClogo" style="width: 75px;">
-                <a class="navbar-brand" href="#">RideShare</a>                
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="falsae" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="">Need a Ride</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="">Give a Ride</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="">Testimonies</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="">FAQs</a>
-                        </li>  
-                    </ul>
-                </div>
+          <div class="container">
+            <img src="../RideShareSite/images/NSCCLogo.png" alt="NSCClogo" style="width: 75px;">
+            <a class="navbar-brand" href="#">RideShare</a>                
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="falsae" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Need a Ride</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Give a Ride</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">Testimonies</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="">FAQs</a>
+                  </li>  
+                </ul>
+              </div>
             </div>
         </nav>
         <!-- Hero Section -->
         <section class="hero">
-            <div class="hero-content">         
-               <h2 class="hero-title">Ride Sharing</h2> 
-               <h3 class="hero-subtitle">The smarter way to travel!</h3>
-               <button type="button" class="hero-button" onclick="location.href='needaride,.html'">Need a Ride</button>
-               <button type="button" class="hero-button" onclick="location.href='givearide.html'">Give a Ride</button>
-            </div>
+          <div class="hero-content">         
+            <h2 class="hero-title">Ride Sharing</h2> 
+            <h3 class="hero-subtitle">The smarter way to travel!</h3>
+            <button type="button" class="hero-button" onclick="location.href='needaride,.html'">Need a Ride</button>
+            <button type="button" class="hero-button" onclick="location.href='givearide.html'">Give a Ride</button>
+          </div>
         </section>
-        <Section>
-            <h4>Driver/Rider</h4>
+        <!-- Drivers and Riders Section -->
+        <Section class="drivers-riders">
+          <div class="container">
+            <h3>This is the Driver and Rider section.</h3>
+          </div>
         </Section>
-        <Section>
-            <h5>Become a Driver</h5>
+        <!-- Testimonials -->
+        <Section class="testimonies">
+          <div class="container">
+            <h3>This is the testimonies section.</h3>
+          </div>
         </Section>
         <!-- FAQs Section -->
-        <Section>
+        <Section class="faqs">
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
             <div class="container mt-3">
-                <h6>Frequenctly Asked Questions</h6>
-                <p><strong>Note:</strong> Here are some of the FAQs.</p>
-                <div id="accordion">
-                  <div class="card">
-                    <div class="card-header">
-                      <a1 class="btn" data-bs-toggle="collapse" href="#collapseOne">Question 1</a1>
-                    </div>
-                    <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
-                      <div class="card-body">Answer 1
-                      </div>
+              <h3>Frequenctly Asked Questions</h3>
+              <p><strong>Note:</strong> Here are some of the FAQs.</p>
+              <div id="accordion">
+                <div class="card">
+                  <div class="card-header">
+                    <a1 class="btn" data-bs-toggle="collapse" href="#collapseOne">
+                      I already bought a parking permit and would like to avail the service as a rider. Can I return it?</a1>
+                  </div>
+                  <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
+                    <div class="card-body">
+                      <strong>Yes</strong>, parking pass can be returned and you will also receive a pro-rated refund based on the number of weeks remaining on the pass.
                     </div>
                   </div>
-                  <div class="card">
-                    <div class="card-header">
-                      <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Question 2</a1>
-                    </div>
-                    <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
-                      <div class="card-body">Answer 2
-                      </div>
+                </div>
+                <div class="card">
+                  <div class="card-header">
+                    <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Question 2</a1>
+                  </div>
+                  <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
+                    <div class="card-body">Answer 2
                     </div>
                   </div>
-                  <div class="card">
-                    <div class="card-header">
-                      <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">Question 3</a1>
+                </div>
+                <div class="card">
+                  <div class="card-header">
+                    <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">Question 3</a1>
+                  </div>
+                  <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
+                    <div class="card-body">
+                      Answer 3
                     </div>
-                    <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
-                      <div class="card-body">
-                        Answer 3
-                      </div>
                     </div>
                   </div>
                 </div>
@@ -110,7 +118,9 @@
         </Section>
         <!-- Footer -->
         <footer>
-          <div></div>
+          <div class="containe">
+            <p>© 2023 Johnjie Alzate</p>
+          </div>
         </footer>
     </body>
 </html> 
