--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -118,7 +118,7 @@
         </Section>
         <!-- Footer -->
         <footer>
-          <div class="containe">
+          <div class="container">
             <p>© 2023 Johnjie Alzate</p>
           </div>
         </footer>
