--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -1,9 +1,9 @@
 <!-- Author: Johnjie Alzatae
     Student ID: W0474627
-    Course: IT Generalist
+    Course: WEBD 1000
     Date: November 14, 2023
     Project: Responsive Ride-Sharing Web Page with Bootstrap 5
-    Version: HTML Bootstrap
+    Version: HTML Bootstrap CSS
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -65,21 +65,61 @@
         </section>
         <!-- Drivers and Riders Section -->
         <Section class="drivers-riders">
-          <div class="container">
-            <h3>This is the Driver and Rider section.</h3>
+          <div class="container p-5 my-5 border">  
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="row">
+                  <div class="col-sm-3">
+                    <img src="../RideShareSite/images/driver.png" alt="driver" style="width: 100px;">
+                  </div>
+                </div>
+                <h3>Become a Driver</h3>
+                <p1>Offer a rideshare to NSCC students to filll your empty seats and save dollars while having fun riding with new friends.</p1>
+              </div>
+              <div class="col-sm-6">
+                <div class="row">
+                  <div class="col-sm-3">
+                    <img src="../RideShareSite/images/rider.png" alt="rider" style="width: 100px;">
+                  </div>
+                </div>
+
+                <h3>Become a Rider</h3>
+                <p1>Search for an available ride and book/pay online to save money.</p1>
+              </div>
+            </div>
           </div>
         </Section>
         <!-- Testimonials -->
-        <Section class="testimonies">
-          <div class="container">
-            <h3>This is the testimonies section.</h3>
+        <Section class="testimonies ">
+          <div class="container p-5 my-5 border">
+            <h3>Testimonials</h3>
+              <div class="container_testimonial">
+                <img src="../RideShareSite/images/boy.png" alt="boy" style="width:100px">
+                <p><span>John Fox.</span> IT Generalist Student.</p>
+                <p>I saved a lot.</p>
+              </div>
+              <div class="container_testimonial">
+                <img src="../RideShareSite/images/girl.png" alt="girl" style="width:100px">
+                <p><span>Haley Tan.</span> IT Generalist Student.</p>
+                <p>Had an amazing ride.</p>
+              </div>
+              <div class="container_testimonial">
+                <img src="../RideShareSite/images/man.png" alt="man" style="width:100px">
+                <p><span>Anonymous Member.</span> NSCC Student.</p>
+                <p>Cool service.</p>
+              </div>
+              <div class="container_testimonial">
+                <img src="../RideShareSite/images//woman.png" alt="woman" style="width:100px">
+                <p><span>Teddy Wewers.</span> Faculty.</p>
+                <p>A great way to create a student community.</p>
+              </div>
           </div>
         </Section>
         <!-- FAQs Section -->
         <Section class="faqs">
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-            <div class="container mt-3">
+            <div class="container mt-3 p-5 my-5 border">
               <h3>Frequenctly Asked Questions</h3>
               <p><strong>Note:</strong> Here are some of the FAQs.</p>
               <div id="accordion">
