--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -75,6 +75,7 @@
                 </div>
                 <h3>Become a Driver</h3>
                 <p1>Offer a rideshare to NSCC students to filll your empty seats and save dollars while having fun riding with new friends.</p1>
+                <a href="">Learn more...</a>
               </div>
               <div class="col-sm-6">
                 <div class="row">
@@ -82,9 +83,9 @@
                     <img src="../RideShareSite/images/rider.png" alt="rider" style="width: 100px;">
                   </div>
                 </div>
-
                 <h3>Become a Rider</h3>
-                <p1>Search for an available ride and book/pay online to save money.</p1>
+                <p1>Search for the available ride and book/pay online to save money.</p1>
+                <a href="">Learn more...</a>
               </div>
             </div>
           </div>
