--- a/WEBD1000-W0474627_HTML_CSS_Skills_Development.html
+++ b/WEBD1000-W0474627_HTML_CSS_Skills_Development.html
@@ -23,8 +23,9 @@
         </style>
     </head>
     <body>
+        
         <!-- Inline Styling-->
-        <div style="color: aqua;">
+        <div style="color: rgb(255, 0, 0);">
             Exercise 1: This is a div with in line styling.
         </div>
         <!-- Internal Style-->
@@ -35,4 +36,32 @@
         <div class="myDiv">
             Exercise 3: This s a div with external styling            
         </div>
+        <!-- Selectors and Descendants -->
+        <div>
+            <span style="color: blue; font-style: italic;" >Exercise 4</span>: This is the selector and descendants.
+        </div>
+        <!-- Box Model -->
+        <div>
+            <div class="div_exercise5">
+                Exercise 5: This is a box model.
+            </div>
+        </div>
+        <!-- Flexbox -->
+        <div class="flex_container_exercise6">
+            <div style="background-color: red;">Exercise 6: This is a div child with a different background color: RED.</div>
+            <div style="background-color: green;">Exercise 6: This is a div child with a different background color: GREEN.</div>
+            <div style="background-color: blue;">Exercise 6: This is a div child with a different background color: BLUE.</div>
+        </div>
+        <!-- Positioning -->
+        <div clas="flex_container_exercise6">
+            <div style="position: relative">Exercise 7: This is a div child with a relative position.</div>
+            <div style="position: absolute;">Exercise 7: This is a div child with an absolute position.</div>
+        </div>
+        <!-- Transitions-->
+        <div>
+            <button class="button button_exercise8">Exercise 8</button>
+        </div>
+        <!-- Responsiive Design -->         
+
+    </body>
 </html>
