--- a/WEBD1000-W0474627_HTML_CSS_Skills_Development.html
+++ b/WEBD1000-W0474627_HTML_CSS_Skills_Development.html
@@ -23,7 +23,9 @@
         </style>
     </head>
     <body>
-        
+        <Header>
+            <h2>HTML and CSS Skills Development Exercise</h2>
+        </Header>        
         <!-- Inline Styling-->
         <div style="color: rgb(255, 0, 0);">
             Exercise 1: This is a div with in line styling.
@@ -59,9 +61,12 @@
         </div>
         <!-- Transitions-->
         <div>
+            <h4>Exercise 8 button</h4>
             <button class="button button_exercise8">Exercise 8</button>
         </div>
         <!-- Responsiive Design -->         
-
+        <footer>            
+            <div class="container"><p>© 2023 Johnjie Alzate</p></div>              
+        </footer>
     </body>
 </html>
