--- a/WEBD1000-W0474627_HTML_CSS_Skills_Development.html
+++ b/WEBD1000-W0474627_HTML_CSS_Skills_Development.html
@@ -56,12 +56,12 @@
         </div>
         <!-- Positioning -->
         <div clas="flex_container_exercise6">
-            <div style="position: relative">Exercise 7: This is a div child with a relative position.</div>
-            <div style="position: absolute;">Exercise 7: This is a div child with an absolute position.</div>
+            <div class="relative">Exercise 7: This is a div child with a relative position.</div>
+            <div class="absolute">Exercise 7: This is a div child with an absolute position.</div>
         </div>
         <!-- Transitions-->
         <div>
-            <h4>Exercise 8 button</h4>
+            <h4>Exercise 8: button changes its background color and font color on hover</h4>
             <button class="button button_exercise8">Exercise 8</button>
         </div>
         <!-- Responsiive Design -->         
