--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -20,16 +20,14 @@
     <body>
         <!-- Webpage Content -->
         <header>
-          <div class="container">
+          <div class="container_header">
             <h1>Welcome to Your Ride Sharing</h1>
           </div>
         </header>
-
         <!-- Navigation Bar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container">
-            <img src="../RideShareSite/images/NSCCLogo.png" alt="NSCClogo" style="width: 75px;">
-            <a class="navbar-brand" href="#">RideShare</a>                
+            <img src="../RideShareSite/images/NSCCLogo.png" alt="NSCClogo" style="width: 75px;">             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="falsae" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -75,7 +73,7 @@
                 </div>
                 <h3>Become a Driver</h3>
                 <p1>Offer a rideshare to NSCC students to filll your empty seats and save dollars while having fun riding with new friends.</p1>
-                <a href="">Learn more...</a>
+                <button type="button" class="driver_learn_more" onclick="location.href='learnmore_driver.html'">Learn more...</button>
               </div>
               <div class="col-sm-6">
                 <div class="row">
@@ -85,7 +83,7 @@
                 </div>
                 <h3>Become a Rider</h3>
                 <p1>Search for the available ride and book/pay online to save money.</p1>
-                <a href="">Learn more...</a>
+                <button type="button" class="rider_learn_more" onclick="location.href='learnmore_rider.html'">Learn more...</button>
               </div>
             </div>
           </div>
@@ -112,7 +110,7 @@
               <div class="container_testimonial">
                 <img src="../RideShareSite/images//woman.png" alt="woman" style="width:100px">
                 <p><span>Teddy Wewers.</span> Faculty.</p>
-                <p>A great way to create a student community.</p>
+                <p>A great way to create a student community!</p>
               </div>
           </div>
         </Section>
