--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -8,158 +8,166 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <!-- Boostrap CSS link-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-        <!-- Boostrap JS (Latest Compiles JavaScript )-->
-        <script src="https://cdn.jsdelvr.net/npm/bootstrap@5.3.0/dist/js/boostrap.bundle.min.js"></script>
-        <title>NSCC - Ride Sharing</title>
-      </head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="style.css">
+      <!-- Boostrap CSS link-->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+      <!-- Boostrap JS -->
+      <script src="https://cdn.jsdelvr.net/npm/bootstrap@5.3.0/dist/js/boostrap.bundle.min.js"></script>
+      <title>NSCC - Ride Sharing</title>
+    </head>
     <body>
-        <!-- Webpage Content -->
-        <header>
-          <div class="container_header">
-            <h1>Welcome to Your Ride Sharing</h1>
+      <!-- Webpage Content -->
+      <header>
+        <div class="container_header">
+          <h1>Welcome to Your Ride Sharing</h1>
+        </div>
+      </header>
+      <!-- Navigation Bar-->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <div id="nscc_logo">
+            <img src="../RideShareSite/images/NSCCLogo.png" alt="NSCClogo" style="width: 75px;">
           </div>
-        </header>
-        <!-- Navigation Bar-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container">
-            <img src="../RideShareSite/images/NSCCLogo.png" alt="NSCClogo" style="width: 75px;">             
+          <div id="nav">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="falsae" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="">Need a Ride</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="">Give a Ride</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="">Testimonies</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="">FAQs</a>
-                  </li>  
-                </ul>
-              </div>
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Need a Ride</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Give a Ride</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Testimonies</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">FAQs</a>
+                </li>  
+              </ul>
             </div>
-        </nav>
-        <!-- Hero Section -->
-        <section class="hero">
-          <div class="hero-content">         
-            <h2 class="hero-title">Ride Sharing</h2> 
-            <h3 class="hero-subtitle">The smarter way to travel!</h3>
-            <button type="button" class="hero-button" onclick="location.href='needaride,.html'">Need a Ride</button>
-            <button type="button" class="hero-button" onclick="location.href='givearide.html'">Give a Ride</button>
           </div>
-        </section>
-        <!-- Drivers and Riders Section -->
-        <Section class="drivers-riders">
-          <div class="container p-5 my-5 border">  
-            <div class="row">
-              <div class="col-sm-6">
-                <div class="row">
-                  <div class="col-sm-3">
-                    <img src="../RideShareSite/images/driver.png" alt="driver" style="width: 100px;">
-                  </div>
+        </div>
+      </nav>
+      <!-- Hero Section -->
+      <section class="hero">
+        <div class="hero-content">         
+          <h2 class="hero-title">Ride Sharing</h2> 
+          <h3 class="hero-subtitle">The smarter way to travel!</h3>
+          <button type="button" class="hero-button" onclick="location.href='needaride.html'">Need a Ride</button>
+          <button type="button" class="hero-button" onclick="location.href='givearide.html'">Give a Ride</button>
+        </div>
+      </section>
+      <!-- Drivers and Riders Section -->
+      <section class="drivers-riders">
+        <div class="container p-5 my-5 border">  
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="row">
+                <div class="col-sm-3">
+                  <img src="../RideShareSite/images/driver.png" alt="driver" style="width: 100px;">
                 </div>
-                <h3>Become a Driver</h3>
-                <p1>Offer a rideshare to NSCC students to filll your empty seats and save dollars while having fun riding with new friends.</p1>
-                <button type="button" class="driver_learn_more" onclick="location.href='learnmore_driver.html'">Learn more...</button>
               </div>
-              <div class="col-sm-6">
-                <div class="row">
-                  <div class="col-sm-3">
-                    <img src="../RideShareSite/images/rider.png" alt="rider" style="width: 100px;">
-                  </div>
+                <h3>Become a Driver</h3>
+                Offer a rideshare to NSCC students to fill your empty seats and save dollars while having fun riding with new friends.
+              <div>
+                <button type="button" class="driver_learn_more" onclick="location.href='learnmore_driver.html'">Learn more...</button>
+              </div>                
+            </div>
+            <div class="col-sm-6">
+              <div class="row">
+                <div class="col-sm-3">
+                  <img src="../RideShareSite/images/rider.png" alt="rider" style="width: 100px;">
                 </div>
-                <h3>Become a Rider</h3>
-                <p1>Search for the available ride and book/pay online to save money.</p1>
+              </div>
+              <h3>Become a Rider</h3>
+              Search for the available ride and save money. You may book and pay online for a hassle free journey.
+              <div>
                 <button type="button" class="rider_learn_more" onclick="location.href='learnmore_rider.html'">Learn more...</button>
               </div>
             </div>
           </div>
-        </Section>
-        <!-- Testimonials -->
-        <Section class="testimonies ">
-          <div class="container p-5 my-5 border">
-            <h3>Testimonials</h3>
-              <div class="container_testimonial">
-                <img src="../RideShareSite/images/boy.png" alt="boy" style="width:100px">
-                <p><span>John Fox.</span> IT Generalist Student.</p>
-                <p>I saved a lot.</p>
-              </div>
-              <div class="container_testimonial">
-                <img src="../RideShareSite/images/girl.png" alt="girl" style="width:100px">
-                <p><span>Haley Tan.</span> IT Generalist Student.</p>
-                <p>Had an amazing ride.</p>
-              </div>
-              <div class="container_testimonial">
-                <img src="../RideShareSite/images/man.png" alt="man" style="width:100px">
-                <p><span>Anonymous Member.</span> NSCC Student.</p>
-                <p>Cool service.</p>
-              </div>
-              <div class="container_testimonial">
-                <img src="../RideShareSite/images//woman.png" alt="woman" style="width:100px">
-                <p><span>Teddy Wewers.</span> Faculty.</p>
-                <p>A great way to create a student community!</p>
-              </div>
-          </div>
-        </Section>
-        <!-- FAQs Section -->
-        <Section class="faqs">
-          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-            <div class="container mt-3 p-5 my-5 border">
-              <h3>Frequenctly Asked Questions</h3>
-              <p><strong>Note:</strong> Here are some of the FAQs.</p>
-              <div id="accordion">
-                <div class="card">
-                  <div class="card-header">
-                    <a1 class="btn" data-bs-toggle="collapse" href="#collapseOne">
-                      I already bought a parking permit and would like to avail the service as a rider. Can I return it?</a1>
-                  </div>
-                  <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
-                    <div class="card-body">
-                      <strong>Yes</strong>, parking pass can be returned and you will also receive a pro-rated refund based on the number of weeks remaining on the pass.
-                    </div>
-                  </div>
+        </div>
+      </section>
+      <!-- Testimonials -->
+      <section class="testimonies">
+        <div class="container p-5 my-5 border">
+          <h3>Testimonials</h3>
+            <div class="container_testimonial">
+              <img src="../RideShareSite/images/boy.png" alt="boy" style="width:100px">
+              <p><span>John Fox.</span> IT Generalist Student.</p>
+              <p>I saved a lot. I was able to help reduce the carboon footprint.</p>
+            </div>
+            <div class="container_testimonial">
+              <img src="../RideShareSite/images/girl.png" alt="girl" style="width:100px">
+              <p><span>Haley Tan.</span> IT Generalist Student.</p>
+              <p>Had an amazing ride!</p>
+            </div>
+            <div class="container_testimonial">
+              <img src="../RideShareSite/images/man.png" alt="man" style="width:100px">
+              <p><span>Anonymous Member.</span> NSCC Student.</p>
+              <p>Cool service.</p>
+            </div>
+            <div class="container_testimonial">
+              <img src="../RideShareSite/images//woman.png" alt="woman" style="width:100px">
+              <p><span>Teddy Wewers.</span> Faculty.</p>
+              <p>A great way to create a student community!</p>
+            </div>
+        </div>
+      </section>
+      <!-- FAQs Section -->
+      <section class="faqs">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+          <div class="container mt-3 p-5 my-5 border">
+            <h3>Frequenctly Asked Questions</h3>
+            <p><strong>Note:</strong> Here are some of the FAQs.</p>
+            <div id="accordion">
+              <div class="card">
+                <div class="card-header">
+                  <a1 class="btn" data-bs-toggle="collapse" href="#collapseOne">
+                    I already bought a parking permit and would like to avail the service as a rider. Can I return it?</a1>
                 </div>
-                <div class="card">
-                  <div class="card-header">
-                    <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Question 2</a1>
-                  </div>
-                  <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
-                    <div class="card-body">Answer 2
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-header">
-                    <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">Question 3</a1>
-                  </div>
-                  <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
-                    <div class="card-body">
-                      Answer 3
-                    </div>
-                    </div>
+                <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
+                  <div class="card-body">
+                    <strong>Yes</strong>, parking pass can be returned and you will also receive a pro-rated refund based on the number of weeks remaining on the pass.
                   </div>
                 </div>
               </div>
-        </Section>
-        <!-- Footer -->
-        <footer>
-          <div class="container">
-            <p>© 2023 Johnjie Alzate</p>
-          </div>
-        </footer>
+              <div class="card">
+                <div class="card-header">
+                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Question 2</a1>
+                </div>
+                <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
+                  <div class="card-body">Answer 2
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header">
+                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">Question 3</a1>
+                </div>
+                <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
+                  <div class="card-body">
+                    Answer 3
+                  </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+      </section>
+      <!-- Footer -->
+      <footer>
+        <div class="container_footer">
+          <p>© 2023 Johnjie Alzate</p>
+        </div>
+      </footer>
     </body>
 </html> 
