--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -104,7 +104,7 @@
             <div class="container_testimonial">
               <img src="../RideShareSite/images/boy.png" alt="boy" style="width:100px">
               <p><span>John Fox.</span> IT Generalist Student.</p>
-              <p>I saved a lot. I was able to help reduce the carboon footprint.</p>
+              <p>I saved a lot. I was able to help reduce the carbon footprint.</p>
             </div>
             <div class="container_testimonial">
               <img src="../RideShareSite/images/girl.png" alt="girl" style="width:100px">
