--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -144,20 +144,21 @@
               </div>
               <div class="card">
                 <div class="card-header">
-                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Question 2</a1>
+                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Question 2: None yet. <span style="weight: bold;">To be updated soon.</span></a1>
                 </div>
                 <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
-                  <div class="card-body">Answer 2
+                  <div class="card-body">
+                      Answer 2: To be updated soon.
                   </div>
                 </div>
               </div>
               <div class="card">
                 <div class="card-header">
-                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">Question 3</a1>
+                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">Question 3: None yet. <span style="weight: bold;">To be updated soon.</span></a1>
                 </div>
                 <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
                   <div class="card-body">
-                    Answer 3
+                    Answer 3: To be updated soon.
                   </div>
                   </div>
                 </div>
