--- a/TheFlickPoet/TFPHomePage.html
+++ b/TheFlickPoet/TFPHomePage.html
@@ -5,40 +5,45 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="=width=device-width" intial-scale="1.0">
         <!-- Boostrap CSS link-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
         <!-- Boostrap JS -->
-        <script src="https://cdn.jsdelvr.net/npm/bootstrap@5.3.2/dist/js/boostrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelvr.net/npm/bootstrap@5.3.0/dist/js/boostrap.bundle.min.js"></script>
     </head>
     <body>
         <head><div class="head"></div></head>
-            <div class="nav"></div>
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <div class="container-fluid">
-                    <a class="navbar-brand" href="#">The Flick Poet</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                <a>The Flick Poet</a>
+                <div id="nav">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="falsae" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                        </ul>
+                        <a class="nav-link" href="">Contact</a>
+                        </li>  
+                    </ul>
                     </div>
-                    </div>
-                </nav>
+                </div>
+                </div>
             </nav>
-            <Section>
-                <div></div>
-            </Section>
+        <section class="hero">
+            <div class="hero-content">         
+                <h2 class="hero-title">The Flick Poet</h2> 
+                <h3 class="hero-subtitle">Art of Storytelling</h3>
+                <button type="button" class="hero-button" onclick="location.href='needaride.html'">Need a Ride</button>
+                <button type="button" class="hero-button" onclick="location.href='givearide.html'">Give a Ride</button>
+            </div> 
+        </Section>
     </body>
 </html>
