--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -28,7 +28,7 @@
       </header>
       <!-- Navigation Bar-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
+        <div class="container-fluid">
           <div id="nscc_logo">
             <img src="../RideShareSite/images/NSCCLogo.png" alt="NSCClogo" style="width: 75px;">
           </div>
