--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -30,8 +30,8 @@
       <main>
         <!-- Navigation Bar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand">
+          <div class="container-fluid" href="">
+            <a href="" class="navbar-brand">
               <img src="../RideShareSite/images/NSCCLogo.png" alt="NSCClogo" style="width: 75px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,8 +62,8 @@
           </div>
         </nav>
         <!-- Hero Section -->
-        <section class="hero" id="hero">
-          <div class="hero-content">         
+        <section id="hero">
+          <div class="container" id="hero-content">         
             <h2 class="hero-title">Ride Sharing</h2> 
             <h3 class="hero-subtitle">The smarter way to travel!</h3>
             <button type="button" class="hero-button" onclick="location.href='needaride.html'">Need a Ride</button>
