--- a/WEBD1000-W0474627_HTML_CSS_Skills_Development.html
+++ b/WEBD1000-W0474627_HTML_CSS_Skills_Development.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <!-- Flexbox -->
-        <div class="flex_container_exercise6">
+        <div class="flex-container" id="flex_container_exercise6">
             <div style="background-color: red;">Exercise 6: This is a div child with a different background color: RED.</div>
             <div style="background-color: green;">Exercise 6: This is a div child with a different background color: GREEN.</div>
             <div style="background-color: blue;">Exercise 6: This is a div child with a different background color: BLUE.</div>
