--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -11,9 +11,11 @@
 <html lang="en">
     <head>
       <title>NSCC - Ride Sharing</title>
+      <!-- Add icon link -->
+      <link rel="icon" href="../RideShareSite/images/NRS.png" type="image/x-icon">
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="style.css">      
       <!-- Boostrap CSS link-->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
       <!-- Boostrap JS -->
@@ -26,108 +28,115 @@
           <h1>Welcome to Your Ride Sharing</h1>
         </div>
       </header>
-      <!-- Navigation Bar-->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a>
-            <img src="../RideShareSite/images/NSCCLogo.png" alt="NSCClogo" style="width: 75px;">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#hero">Need a Ride</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#hero">Give a Ride</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#testimonies">Testimonies</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#faqs">FAQs</a>
-              </li>  
-            </ul>
+      <!-- Main Content -->
+      <main>
+        <!-- Navigation Bar-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid" href="">
+            <a href="" class="navbar-brand">
+              <img src="../RideShareSite/images/NSCCLogo.png" alt="NSCClogo" style="width: 75px;">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
           </div>
-        </div>
-      </nav>
-      <!-- Hero Section -->
-      <section class="hero" id="hero">
-        <div class="hero-content">         
-          <h2 class="hero-title">Ride Sharing</h2> 
-          <h3 class="hero-subtitle">The smarter way to travel!</h3>
-          <button type="button" class="hero-button" onclick="location.href='needaride.html'">Need a Ride</button>
-          <button type="button" class="hero-button" onclick="location.href='givearide.html'">Give a Ride</button>
-        </div>
-      </section>      
-      <!-- Drivers and Riders Section -->
-      <section class="drivers-riders" id="drivers_riders">
-        <div class="container p-5 my-5 border">  
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="row">
-                <div class="col-sm-3">
-                  <img src="../RideShareSite/images/driver.png" alt="driver" style="width: 100px;">
-                </div>
-              </div>
-                <h3>Become a Driver</h3>
-                <p1>Offer a rideshare to NSCC students to fill your empty seats and save dollars while having fun riding with new friends.</p1>
-              <div>
-                <button type="button" class="driver_learn_more" onclick="location.href='learnmore_driver.html'">Learn more...</button>
-              </div>
-              <div class="a"></div>                
-            </div>
-            <div class="col-sm-6">
-              <div class="row">
-                <div class="col-sm-3">
-                  <img src="../RideShareSite/images/rider.png" alt="rider" style="width: 100px;">
-                </div>
-              </div>
-              <h3>Become a Rider</h3>
-              <p1>Search for the available ride and save money. You may book and pay online for a hassle free journey.</p1>
-              <div>
-                <button type="button" class="rider_learn_more" onclick="location.href='learnmore_rider.html'">Learn more...</button>
-              </div>
-              <div class="b"></div>    
+          <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#hero">Need a Ride</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#hero">Give a Ride</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#testimonies">Testimonies</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#faqs">FAQs</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#safety">Safety</a>
+                </li>  
+              </ul>
             </div>
           </div>
-        </div>
-      </section>
-      <!-- Testimonials -->
-      <section class="testimonies" id="testimonies">
-        <div class="container p-5 my-5 border">
-          <h3>Testimonials</h3>
-            <div class="container_testimonial">
-              <img src="../RideShareSite/images/boy.png" alt="boy" style="width:100px">
-              <p1><span>John Fox.</span> IT Generalist Student.</p1>
-              <p1>I saved a lot. I was able to help reduce the carbon footprint.</p1>
+        </nav>
+        <!-- Hero Section -->
+        <section id="hero">
+          <div class="container" id="hero-content">         
+            <h2 class="hero-title">Ride Sharing</h2> 
+            <h3 class="hero-subtitle">The smarter way to travel!</h3>
+            <button type="button" class="hero-button" onclick="location.href='needaride.html'">Need a Ride</button>
+            <button type="button" class="hero-button" onclick="location.href='givearide.html'">Give a Ride</button>
+          </div>
+        </section>      
+        <!-- Drivers and Riders Section -->
+        <section id="drivers-riders">
+          <div class="container p-5 my-5 border">  
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="row">
+                  <div class="col-sm-3">
+                    <img src="../RideShareSite/images/driver.png" alt="driver" style="width: 100px;">
+                  </div>
+                </div>
+                  <h3>Become a Driver</h3>
+                  <p1>Offer a rideshare to NSCC students to fill your empty seats and save dollars while having fun riding with new friends.</p1>
+                <div>
+                  <button type="button" class="driver_learn_more" onclick="location.href='learnmore_driver.html'">Learn more...</button>
+                </div>
+                <div class="a"></div>                
+              </div>
+              <div class="col-sm-6">
+                <div class="row">
+                  <div class="col-sm-3">
+                    <img src="../RideShareSite/images/rider.png" alt="rider" style="width: 100px;">
+                  </div>
+                </div>
+                <h3>Become a Rider</h3>
+                <p1>Search for the available ride and save money. You may book and pay online for a hassle free journey.</p1>
+                <div>
+                  <button type="button" class="rider_learn_more" onclick="location.href='learnmore_rider.html'">Learn more...</button>
+                </div>
+                <div class="b"></div>    
+              </div>
             </div>
-            <div class="container_testimonial">
-              <img src="../RideShareSite/images/girl.png" alt="girl" style="width:100px">
-              <p1><span>Haley Tan.</span> IT Generalist Student.</p1>
-              <p1>Had an amazing ride!</p1>
-            </div>
-            <div class="container_testimonial">
-              <img src="../RideShareSite/images/man.png" alt="man" style="width:100px">
-              <p1><span>Anonymous Member.</span> NSCC Student.</p1>
-              <p1>Cool service.</p>
-            </div>
-            <div class="container_testimonial">
-              <img src="../RideShareSite/images//woman.png" alt="woman" style="width:100px">
-              <p1><span>Teddy Wewers.</span> Faculty.</p1>
-              <p1>A great way to create a student community!</p1>
-            </div>
-        </div>
-      </section>
-      <!-- FAQs Section -->
-      <section class="faqs" id="faqs">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+          </div>
+        </section>
+        <!-- Testimonials Section -->
+        <section id="testimonies">
+          <div class="container p-5 my-5 border">
+            <h3>Testimonials</h3>
+              <div class="container_testimonial">
+                <img src="../RideShareSite/images/boy.png" alt="boy" style="width:100px">
+                <p1><span>John Fox.</span> IT Generalist Student.</p1>
+                <p1>I saved a lot. I was able to help reduce the carbon footprint.</p1>
+              </div>
+              <div class="container_testimonial">
+                <img src="../RideShareSite/images/girl.png" alt="girl" style="width:100px">
+                <p1><span>Haley Tan.</span> IT Generalist Student.</p1>
+                <p1>Had an amazing ride!</p1>
+              </div>
+              <div class="container_testimonial">
+                <img src="../RideShareSite/images/man.png" alt="man" style="width:100px">
+                <p1><span>Anonymous Member.</span> NSCC Student.</p1>
+                <p1>Cool service.</p>
+              </div>
+              <div class="container_testimonial">
+                <img src="../RideShareSite/images//woman.png" alt="woman" style="width:100px">
+                <p1><span>Teddy Wewers.</span> Faculty.</p1>
+                <p1>A great way to create a student community!</p1>
+              </div>
+          </div>
+        </section>
+        <!-- FAQs Section -->
+        <section id="faqs">
+          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
           <div class="container mt-3 p-5 my-5 border">
             <h3>Frequenctly Asked Questions</h3>
             <p><strong>Note:</strong> Here are some of the FAQs.</p>
@@ -161,16 +170,24 @@
                   <div class="card-body">
                     Answer 3: To be updated soon.
                   </div>
-                  </div>
                 </div>
               </div>
             </div>
-      </section>     
-      <!-- Footer -->
-      <footer>
-        <div class="container_footer">
-          <p>© 2023 Johnjie Alzate</p>
-        </div>
-      </footer>
+          </div>
+        </section>
+        <!-- Safety Section -->
+        <section id="safety">
+          <div class="container mt-3 p-5 my-5 border">
+            <h3>Safety</h3>
+            <p1>This section  is for safety.</p1>
+          </div>
+        </section>     
+        <!-- Footer -->
+        <footer>
+          <div id="footer">
+            <p>© 2023 Johnjie Alzate</p>
+          </div>
+        </footer>
+      </main>
     </body>
 </html>
