--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -195,19 +195,19 @@
         <footer>
           <div id="footer">
             <nav class="sitemap">
-              <div id="section1">
+              <div class="container-fluid" id="section1">
               <a href="" class="need_a_ride_footer">Need a Ride</a> |
               <a href="" class="give_a_ride_footer">Give a Ride</a> |
               <a href="" class="testimonies_footer">Testimonies</a> |
               <a href="" class="faqs_footer">FAQs</a> |
               <a href="" class="safety_footer">Safety</a> 
             </div>
-            <div>
+            <div class="container">
               <a href="" class="terms_and_conditions">Terms and Conditions</a> |
               <a href="" class="about">About NSCC Ride Share</a> |
               <a href="" class="contact_us">Contact us</a> 
             </div>
-            <div class="container_socials">
+            <div class="container" id="container_socials">
               <a href="#" class="twitter"><img src="../RideShareSite/images/twitter.gray.png" alt="Twitter" class="twitter"></a>
               <a href="#" class="instagram"><img src="../RideShareSite/images/ig.gray.png" alt="Instagram" class="instagram"></a>
               <a href="#" class="facebook"><img src="../RideShareSite/images/fb.gray.png" alt="Facebook" class="facebook"></a>
