--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -73,16 +73,16 @@
             <form>
               <div class="row">
                 <div class="col-2"></div>
-              <div class="col-8">
-                <div id="form">
-                  <input class="pickup" type="text" placeholder="Pick-up location" name="pickup_location"  required>
-                </div>
-                <div id="form">
-                  <input class="dropoff" type="text" placeholder="Drop-off location" name="dropoff_location"  required>
-                </div>
-                <div id="form">
-                <button type="button" class="search_button" onclick="location.href='serach_for_a_ride.html'">Search for a ride</button>
-                </div>
+                <div class="col-8">
+                  <div id="form">
+                    <input class="pickup" type="text" placeholder="Pick-up location" name="pickup_location"  required>
+                  </div>
+                  <div id="form">
+                    <input class="dropoff" type="text" placeholder="Drop-off location" name="dropoff_location"  required>
+                  </div>
+                  <div id="form">
+                    <button type="button" class="search_button" onclick="location.href='serach_for_a_ride.html'">Search for a ride</button>
+                  </div>
               </div>
               <div class="2"></div>
             </form>
@@ -201,24 +201,31 @@
           <div id="footer">
             <nav class="sitemap">
               <div class="container-fluid" id="section1">
-              <a href="" class="need_a_ride_footer">Need a Ride</a> |
-              <a href="" class="give_a_ride_footer">Give a Ride</a> |
-              <a href="" class="testimonies_footer">Testimonies</a> |
-              <a href="" class="faqs_footer">FAQs</a> |
-              <a href="" class="safety_footer">Safety</a> 
-            </div>
-            <div class="container">
-              <a href="" class="terms_and_conditions">Terms and Conditions</a> |
-              <a href="" class="about">About NSCC Ride Share</a> |
-              <a href="" class="contact_us">Contact us</a> 
-            </div>
-            <div class="container" id="container_socials">
-              <a href="#" class="twitter"><img src="../RideShareSite/images/twitter.gray.png" alt="Twitter" class="twitter"></a>
-              <a href="#" class="instagram"><img src="../RideShareSite/images/ig.gray.png" alt="Instagram" class="instagram"></a>
-              <a href="#" class="facebook"><img src="../RideShareSite/images/fb.gray.png" alt="Facebook" class="facebook"></a>
-              <a href="#" class="skype"><img src="../RideShareSite/images/skype.gray.png" alt="Skype" class="skype"></a>
-              <a href="#" class="whatsapp"><img src="../RideShareSite/images/whatsup.gray.png" alt="Whatsapp" class="whatsapp"></a>
+                <a href="" class="need_a_ride_footer">Need a Ride</a> |
+                <a href="" class="give_a_ride_footer">Give a Ride</a> |
+                <a href="" class="testimonies_footer">Testimonies</a> |
+                <a href="" class="faqs_footer">FAQs</a> |
+                <a href="" class="safety_footer">Safety</a> 
+              </div>
+              <div class="container">
+                <a href="" class="terms_and_conditions">Terms and Conditions</a> |
+                <a href="" class="about">About NSCC Ride Share</a> |
+                <a href="" class="contact_us">Contact us</a> 
+              </div>
             </nav>
+            <div id="container_socials">
+              <div class="row">
+                <div class="col-2"></div>
+                <div id="div_socials" class="col-8">
+                  <a href="#" class="twitter"><img src="../RideShareSite/images/twitter.gray.png" alt="Twitter" class="twitter"></a>
+                  <a href="#" class="instagram"><img src="../RideShareSite/images/ig.gray.png" alt="Instagram" class="instagram"></a>
+                  <a href="#" class="facebook"><img src="../RideShareSite/images/fb.gray.png" alt="Facebook" class="facebook"></a>
+                  <a href="#" class="skype"><img src="../RideShareSite/images/skype.gray.png" alt="Skype" class="skype"></a>
+                  <a href="#" class="whatsapp"><img src="../RideShareSite/images/whatsup.gray.png" alt="Whatsapp" class="whatsapp"></a>
+                </div>
+                <div class="col-2"></div>
+              </div>
+            </div>
             <div id="footer3">
               <p>© 2023 Johnjie Alzate</p>
             </div>
