--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -83,8 +83,9 @@
                   <div id="form">
                     <button type="button" class="search_button" onclick="location.href='serach_for_a_ride.html'">Search for a ride</button>
                   </div>
+                </div>
+                <div class="col-2"></div>
               </div>
-              <div class="2"></div>
             </form>
           </div>
         </section>      
